--- a/2_preprocessing_articles.ipynb
+++ b/2_preprocessing_articles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,28 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "정치  completed !\n",
-      "경제  completed !\n",
-      "사회  completed !\n",
-      "세계  completed !\n",
-      "생활문화  completed !\n",
-      "IT과학  completed !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from os import listdir\n",
     "from os.path import isfile, join\n",
     "\n",
     "for each in path:\n",
     "    crawling_path = '{}/{}'.format('crawling', each)\n",
+    "    print(crawling_path)\n",
     "    file_names = [f for f in listdir(crawling_path) if isfile(\n",
     "        join(crawling_path, f)) and f.endswith(\".txt\")]\n",
     "    # 파일이름\n",
@@ -152,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,24 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('정치', 0)  completed !\n",
-      "('경제', 1)  completed !\n",
-      "('사회', 2)  completed !\n",
-      "('세계', 3)  completed !\n",
-      "('생활문화', 4)  completed !\n",
-      "('IT과학', 5)  completed !\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "path = [('정치',0), ('경제',1), ('사회',2), ('세계',3), ('생활문화',4), ('IT과학',5)]\n",
     "# path = [('정치',0)]\n",
@@ -221,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
