--- a/tfidf_multiNB.ipynb
+++ b/tfidf_multiNB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,12 +22,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_pickle('dataset/training_set.pkl.pkl')"
+    "data = pd.read_pickle('dataset/training_2018-04-19 20-02-13.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,9 +36,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(lambda x: ['/'.join(t) for t in Twitter().pos(doc)])"
    ]
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,21 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3897    4\n",
-       "3185    3\n",
-       "4211    4\n",
-       "5048    5\n",
-       "946     1\n",
+       "2131    0\n",
+       "9354    3\n",
+       "9740    3\n",
+       "8076    2\n",
+       "179     0\n",
        "Name: area, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,16 +104,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 3min 20s\n"
+     ]
+    }
+   ],
    "source": [
+    "%%time\n",
     "model = clf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,21 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[257,   1,   8,   5,   1,   1],\n",
-       "       [  5, 251,   4,   1,   8,   8],\n",
-       "       [ 10,   5, 255,   1,  11,   0],\n",
-       "       [  5,   3,   0, 276,   6,   2],\n",
-       "       [  3,   4,   3,   0, 276,   4],\n",
-       "       [  3,   7,   0,   1,   9, 250]], dtype=int64)"
+       "array([[816,   3,  33,  25,   4,   4],\n",
+       "       [ 15, 733,  19,   9,  11,  30],\n",
+       "       [ 19,   6, 749,   7,  15,   4],\n",
+       "       [ 18,  12,   0, 815,  10,   8],\n",
+       "       [  1,   9,   6,   1, 847,   8],\n",
+       "       [  5,   6,   2,   6,  14, 778]], dtype=int64)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -146,14 +166,14 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.91      0.94      0.92       273\n",
-      "          1       0.93      0.91      0.92       277\n",
-      "          2       0.94      0.90      0.92       282\n",
-      "          3       0.97      0.95      0.96       292\n",
-      "          4       0.89      0.95      0.92       290\n",
-      "          5       0.94      0.93      0.93       270\n",
+      "          0       0.93      0.92      0.93       885\n",
+      "          1       0.95      0.90      0.92       817\n",
+      "          2       0.93      0.94      0.93       800\n",
+      "          3       0.94      0.94      0.94       863\n",
+      "          4       0.94      0.97      0.96       872\n",
+      "          5       0.94      0.96      0.95       811\n",
       "\n",
-      "avg / total       0.93      0.93      0.93      1684\n",
+      "avg / total       0.94      0.94      0.94      5048\n",
       "\n"
      ]
     }
@@ -171,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,33 +214,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[257,   1,   8,   5,   1,   1],\n",
-       "       [  5, 251,   4,   1,   8,   8],\n",
-       "       [ 10,   5, 255,   1,  11,   0],\n",
-       "       [  5,   3,   0, 276,   6,   2],\n",
-       "       [  3,   4,   3,   0, 276,   4],\n",
-       "       [  3,   7,   0,   1,   9, 250]], dtype=int64)"
+       "array([[816,   3,  33,  25,   4,   4],\n",
+       "       [ 15, 733,  19,   9,  11,  30],\n",
+       "       [ 19,   6, 749,   7,  15,   4],\n",
+       "       [ 18,  12,   0, 815,  10,   8],\n",
+       "       [  1,   9,   6,   1, 847,   8],\n",
+       "       [  5,   6,   2,   6,  14, 778]], dtype=int64)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_pred = model.predict(X_test)\n",
+    "# y_pred = model.predict(X_test)\n",
     "confusion_matrix(y_test, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -229,14 +249,14 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "          0       0.91      0.94      0.92       273\n",
-      "          1       0.93      0.91      0.92       277\n",
-      "          2       0.94      0.90      0.92       282\n",
-      "          3       0.97      0.95      0.96       292\n",
-      "          4       0.89      0.95      0.92       290\n",
-      "          5       0.94      0.93      0.93       270\n",
+      "          0       0.93      0.92      0.93       885\n",
+      "          1       0.95      0.90      0.92       817\n",
+      "          2       0.93      0.94      0.93       800\n",
+      "          3       0.94      0.94      0.94       863\n",
+      "          4       0.94      0.97      0.96       872\n",
+      "          5       0.94      0.96      0.95       811\n",
       "\n",
-      "avg / total       0.93      0.93      0.93      1684\n",
+      "avg / total       0.94      0.94      0.94      5048\n",
       "\n"
      ]
     }
@@ -244,6 +264,13 @@
    "source": [
     "print(classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
